deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api
spec:
  replicas: 4
  selector:
    matchLabels:
      app: api 
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: registry.cluster.wik.cloud/public/echo
        ports:
        - containerPort: 8080
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
  minReadySeconds: 5
