service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
