ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  rules:
  - host: test.com 
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: proxy 
            port:
              number: 80
